# neuron-network

./: .gitignore  CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h  Window.cpp  Window.h  main_graph_training.cpp
